// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Regression internal: 1.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Title
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{},"assets":[],"headings":[],"title":"Title","includes":[],"html":"
      <p>Text {{not-var}} {{skip()}} default-var-value
      </p>/n
      <p>Text
      <code>{{not-var}}
      </code>
      <code>{{skip()}}
      </code>
      <code>default-var-value
      </code>
      </p>/n
      <p>Text
      </p>/n/n
      <div class=\\"yfm-clipboard\\">/n
      <pre>
      <code class=\\"hljs\\">{{not-var}}/n/n{{skip()}}/n/ndefault-var-value/n
      </code>
      </pre>/n/n
      <button class=\\"yfm-clipboard-button\\">/n
      <svg width=\\"16\\" height=\\"16\\" viewBox=\\"0 0 24 24\\" class=\\"yfm-clipboard-icon\\" data-animation=\\"9\\">/n
      <path fill=\\"currentColor\\" d=\\"M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z\\">
      </path>/n
      <path stroke=\\"currentColor\\" fill=\\"transparent\\" stroke-width=\\"1.5\\" d=\\"M9.5 13l3 3l5 -5\\" visibility=\\"hidden\\">/n
      <animate id=\\"visibileAnimation-9\\" attributeName=\\"visibility\\" from=\\"hidden\\" to=\\"visible\\" dur=\\"0.2s\\" fill=\\"freeze\\" begin>
      </animate>/n
      <animate id=\\"hideAnimation-9\\" attributeName=\\"visibility\\" from=\\"visible\\" to=\\"hidden\\" dur=\\"1s\\" begin=\\"visibileAnimation-9.end+1\\" fill=\\"freeze\\">
      </animate>/n
      </path>/n
      </svg>/n
      </button>/n
      </div>/n","leading":false},"router":{"pathname":"1","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: 1.md 1`] = `
"# Title

Text not_var{{not-var}} not_var{{skip()}} default-var-value

Text \`not_var{{not-var}}\` \`not_var{{skip()}}\` \`default-var-value\`

Text
\`\`\`
not_var{{not-var}}

not_var{{skip()}}

default-var-value
\`\`\`
"
`;

exports[`Regression internal: commented-include.md 1`] = `
"![](./missed-asset.png)

[](./missed-link.md)
"
`;

exports[`Regression internal: filelist 1`] = `
"[
  "1.md",
  "commented-include.md",
  "included-item.md",
  "index.yaml",
  "merge/merge.md",
  "merge/merged.md",
  "merge/toc.yaml",
  "sub/folder/item-1.md",
  "toc.yaml"
]"
`;

exports[`Regression internal: filelist 2`] = `
"[
  "1.html",
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/search-css-2",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-js-1",
  "_bundle/search-css-0",
  "_bundle/search-js-2",
  "_bundle/search-css-1",
  "included-item.html",
  "index.html",
  "merge/merge.html",
  "merge/merged.html",
  "merge/toc.js",
  "sub/folder/item-1.html",
  "toc.js"
]"
`;

exports[`Regression internal: included-item.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Included item
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{},"assets":[],"headings":[],"title":"Included item","includes":[],"html":"
      <p>Included item text
      </p>/n/n","leading":false},"router":{"pathname":"included-item","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: included-item.md 1`] = `
"# Included item

Included item text

<!-- :   {% include [rec-off](./commented-include.md) %} -->
"
`;

exports[`Regression internal: index.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"data":{"links":[{"name":"Link 1","href":"1.html"},{"name":"Link 2","href":"1/index.html"}],"meta":{}},"meta":{},"title":"","leading":true},"router":{"pathname":"index","depth":1},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: index.yaml 1`] = `
"links:
  - name: Link 1
    href: ./1.md
  - name: Link 2
    href: ./1
meta: {}
"
`;

exports[`Regression internal: merge/merge.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Should use merged item
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{},"assets":[],"headings":[],"title":"Should use merged item","includes":[],"html":"
      <p>
      <a href=\\"merge/merged.html\\">merged
      </a>
      </p>/n","leading":false},"router":{"pathname":"merge/merge","depth":2},"lang":"ru","langs":["ru"]};
    </script>
    <script src="merge/toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: merge/merge.md 1`] = `
"# Should use merged item

[merged](./merged.md)
"
`;

exports[`Regression internal: merge/merged.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="sourcePath"
          content="merge-source/merged.md"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Merged item
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"sourcePath":"merge-source/merged.md"},"assets":[],"headings":[],"title":"Merged item","includes":[],"html":"
      <p>Should be linked in toc.yaml
      </p>/n","leading":false},"router":{"pathname":"merge/merged","depth":2},"lang":"ru","langs":["ru"]};
    </script>
    <script src="merge/toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: merge/merged.md 1`] = `
"---
sourcePath: merge-source/merged.md
---
# Merged item

Should be linked in toc.yaml
"
`;

exports[`Regression internal: merge/toc.js 1`] = `"window.__DATA__.data.toc = {"items":[{"name":"Use merged","href":"merge/merge.html","id":"UUID"},{"name":"Merged item","href":"merge/merged.html","id":"UUID"}],"id":"UUID"};"`;

exports[`Regression internal: merge/toc.yaml 1`] = `
"items:
  - name: Use merged
    href: merge.md
  - name: Merged item
    href: merged.md
"
`;

exports[`Regression internal: sub/folder/item-1.html 1`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../../">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Item 1
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{},"assets":[],"headings":[],"title":"Item 1","includes":[],"html":"
      <p>Item 1 text
      </p>/n","leading":false},"router":{"pathname":"sub/folder/item-1","depth":3},"lang":"ru","langs":["ru"]};
    </script>
    <script src="toc.js"
            type="application/javascript"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Regression internal: sub/folder/item-1.md 1`] = `
"# Item 1

Item 1 text
"
`;

exports[`Regression internal: toc.js 1`] = `"window.__DATA__.data.toc = {"items":[{"name":"Verbose root (index.yaml) will be transformed to index.html","href":"index.html","id":"UUID"},{"name":"Root will be transformed to index.html","href":"index.html","id":"UUID"},{"name":"Md item with not_var syntax","href":"1.html","id":"UUID"},{"name":"Md item named without extension","href":"1.html","id":"UUID"},{"name":"Item with empty href","id":"UUID"},{"name":"Included Item","href":"included-item.html","id":"UUID"},{"name":"Named include (items is Object here - this is not an error)","items":[{"name":"Item 1","href":"sub/folder/item-1.html","id":"UUID"}],"id":"UUID"}],"id":"UUID"};"`;

exports[`Regression internal: toc.yaml 1`] = `
"items:
  - name: Verbose root (index.yaml) will be transformed to index.html
    href: index.yaml
  - name: Root will be transformed to index.html
    href: /index.yaml
  - name: Md item with not_var syntax
    href: 1.md
  - name: Md item named without extension
    href: 1.md
  - name: Item with empty href
  - name: Included Item
    href: included-item.md
  - name: Named include (items is Object here - this is not an error)
    items:
      - name: Item 1
        href: sub/folder/item-1.md
"
`;
